feature: Добавил обновление информации новости
